[gd_scene load_steps=2 format=3 uid="uid://wh4iays55eiq"]

[ext_resource type="Script" path="res://workbench/workbench.gd" id="1_21i00"]

[node name="Workbench" type="Area3D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_21i00")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="materials_updated" from="." to="." method="_on_materials_updated"]
